from dataclasses import dataclass


@dataclass
class Customer:
    name: str
    customer_type: str
